# EPO-Project

./: .gitignore  Classes.py  EDA.ipynb  README.md  file  main.py  pyproject.toml
Code/: Classes.py  HyperparameterSearch.py  Nested.py  PatentDoc2Vec.py  Word2Vec.ipynb  run_hyperparameter_search.py  run_nested.py
Experiments/: Experiments.py  Nested.py  NestedXGB.py  Patent2Vec.py  PatentDoc2Vec.py  PatentEmbeddings.py  data_processing.py  data_processing_inventive_step.py  deep_learning_experiments.py  evaluation.py  experiment_processing.py  hierarchical_bert.py  ml_experiments.py  run_deep_learning_experiment.py  run_experiment.py  run_hbert_experiment.py  shap_run.py  sliding_window.py  visualisations.ipynb
Results/: HYPERPARAMETERS__Experiment_1_Opposition_False_Algorithm_['xgboost']_Input_TF-IDF  HYPERPARAMETERS__Experiment_1_Opposition_True_Algorithm_['xgboost']_Input_N-Grams  HYPERPARAMETERS__Experiment_2_Opposition_False_Algorithm_['xgboost']_Input_N-Grams  HYPERPARAMETERS__Experiment_2_Opposition_True_Algorithm_['xgboost']_Input_N-Grams  results.ipynb  results__Experiment_1_Opposition_False_Algorithm_['forest']_Input_N-Grams  results__Experiment_1_Opposition_False_Algorithm_['forest']_Input_TF-IDF  results__Experiment_1_Opposition_False_Algorithm_['forest']_Input_doc2vec  results__Experiment_1_Opposition_False_Algorithm_['forest']_Input_law2vec  results__Experiment_1_Opposition_False_Algorithm_['forest']_Input_patent2vec  results__Experiment_1_Opposition_False_Algorithm_['forest']_Input_word2vec  (+96 more)
Utilities/: Classes.py  utils.py
(+16 files in other folders)
