[project]
name = "epo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "spacy[cuda12x]>=3.8.7",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
    "wheel>=0.45.1",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
